--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "anthropic>=0.21.0",
     "openai>=1.10.0",
     "InquirerPy>=0.3.4",
+    "click>=8.0.0",
 ]
 
 [project.optional-dependencies]
