Add TTL configuration and error notifications to Telegram

--- a/template.yaml
+++ b/template.yaml
@@ -49,6 +49,8 @@ Resources:
           AttributeType: S
         - AttributeName: category
           AttributeType: S
+        - AttributeName: expires_at
+          AttributeType: N
       KeySchema:
         - AttributeName: PK
           KeyType: HASH
@@ -63,6 +65,9 @@ Resources:
               KeyType: RANGE
           Projection:
             ProjectionType: ALL
+      TimeToLiveSpecification:
+        AttributeName: expires_at
+        Enabled: true
 
   ProcessorLambda:
     Type: AWS::Serverless::Function
