Refactor project architecture and add trigger-digest CLI
- Migrate from SAM to AWS CDK with workspace structure
- Add trigger-digest command to manually invoke digest Lambda
- Add AssumeRole pattern for limited script permissions
- Add AGENTS.md with CLI patterns and best practices
- Add stack resource utilities in common.environments
- Update README to reflect current project structure
- Remove build_layer.py (layer now built via CDK Docker bundling)

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -21,3 +21,4 @@ build-backend = "hatchling.build"
 setup-webhook = "scripts.setup_webhook:cli"
 tail-logs = "scripts.tail_logs:tail"
 cdkw = "scripts.cdkw:wrapper"
+trigger-digest = "scripts.trigger_digest:cli"
