--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -6,6 +6,7 @@ authors = [{name = "Second Brain Team"}]
 license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = [
+    "dotenv==0.9.9",
 ]
 
 [build-system]
