--- a/packages/lambdas/pyproject.toml
+++ b/packages/lambdas/pyproject.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 description = "aws lambda function code"
 authors = [{name = "Second Brain Team"}]
 license = {text = "MIT"}
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
-    "boto3>=1.26.0,<2.0.0",
-    "requests>=2.28.0",
-    "anthropic>=0.8.0,<1.0.0",
-    "openai>=0.27.0,<2.0.0",
+    "boto3==1.26.0",
+    "requests==2.28.0",
+    "anthropic>=0.7.0",
+    "openai==0.27.0",
+    "pydantic==2.12.5",
     "common",
 ]
 
