Add /digest command and register_commands CLI
- Refactor digest.py to expose generate_digest_summary() callable
- Update processor.py to route /digest command to generate_digest_summary
- Create register_commands.py for registering Telegram bot commands
- Add get_telegram_bot_token() to environments.py with proper error handling
- Update AGENTS.md with environment variable and exception handling guidelines

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -22,3 +22,4 @@ setup-webhook = "scripts.setup_webhook:cli"
 tail-logs = "scripts.tail_logs:tail"
 cdkw = "scripts.cdkw:wrapper"
 trigger-digest = "scripts.trigger_digest:cli"
+register-commands = "scripts.register_commands:cli"
