Move load_env.py and assume_role.py to packages/scripts

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -23,3 +23,5 @@ tail-logs = "scripts.tail_logs:tail"
 cdkw = "scripts.cdkw:wrapper"
 trigger-digest = "scripts.trigger_digest:cli"
 register-commands = "scripts.register_commands:cli"
+load-env = "scripts.load_env:main"
+assume-role = "scripts.assume_role:main"
