Add common.logging utility with Telegram notification and fix reserved keyword errors

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -25,3 +25,4 @@ trigger-digest = "scripts.trigger_digest:cli"
 register-commands = "scripts.register_commands:cli"
 load-env = "scripts.load_env:main"
 assume-role = "scripts.assume_role:main"
+dynamo-debug = "scripts.dynamo_debug:cli"
