First attempt at backfill

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -27,3 +27,4 @@ register-commands = "scripts.register_commands:cli"
 load-env = "scripts.load_env:main"
 assume-role = "scripts.assume_role:main"
 dynamo-debug = "scripts.dynamo_debug:cli"
+backfill-embeddings = "scripts.backfill_embeddings:run_backfill"
