--- a/packages/lambdas/pyproject.toml
+++ b/packages/lambdas/pyproject.toml
@@ -8,8 +8,8 @@ requires-python = ">=3.9"
 dependencies = [
     "boto3==1.26.0",
     "requests==2.28.0",
-    "anthropic>=0.7.0",
-    "openai==0.27.0",
+    "anthropic==0.7.0",
+    "openai==1.109.1",
     "pydantic==2.12.5",
     "common",
 ]
