--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,8 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "packages/common/src",
+]
