--- a/packages/lambdas/pyproject.toml
+++ b/packages/lambdas/pyproject.toml
@@ -6,9 +6,10 @@ authors = [{name = "Second Brain Team"}]
 license = {text = "MIT"}
 requires-python = ">=3.9"
 dependencies = [
-    "boto3==1.26.0",
+    "boto3==1.42.30",
+    "botocore==1.42.30",
     "requests==2.28.0",
-    "anthropic==0.7.0",
+    "anthropic==0.76.0",
     "openai==1.109.1",
     "pydantic==2.12.5",
     "common",
