Remove AWS::S3::VectorIndex from CloudFormation (not supported yet)
Add create_vector_index.py script to create index via API after deployment

--- a/packages/scripts/pyproject.toml
+++ b/packages/scripts/pyproject.toml
@@ -28,3 +28,4 @@ load-env = "scripts.load_env:main"
 assume-role = "scripts.assume_role:main"
 dynamo-debug = "scripts.dynamo_debug:cli"
 backfill-embeddings = "scripts.backfill_embeddings:run_backfill"
+create-vector-index = "scripts.create_vector_index:create_vector_index"
