--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,12 +47,27 @@ dev = [
     "pytest>=7.0.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
+    "ruff>=0.1.0",
     "mypy>=1.0.0"
 ]
 
 [tool.black]
 line-length = 100
 target-version = ['py38']
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E4", "F", "I", "T201"]  # E4+F: imports, I: isort, T201: print
+
+[tool.ruff.lint.per-file-ignores]
+"packages/common/src/common/environments.py" = ["T201", "I"]
+"packages/lambdas/src/lambdas/actions/*" = ["T201"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["common", "lambdas", "scripts"]
 
 [tool.mypy]
 python_version = "3.8"
