Simplify event sourcing: ADR-001 with MessageReceived, MessageClassified, and MessageSimilar events
- Rename ADR-005 to ADR-001 with simplified single-table event sourcing
- Focus on three core events: MessageReceived, MessageClassified, MessageSimilar
- Update schema design for single DynamoDB table with PK/SK patterns
- Add vector similarity detection as auditable MessageSimilar events
- Update processing flow and replay capabilities
- Update references in ARCHITECTURE.md and SPECIFICATION_CHECKLIST.md

--- a/packages/lambdas/pyproject.toml
+++ b/packages/lambdas/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
     "dotenv==0.9.9",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "moto>=4.0.0",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
