Add ty type checker to pre-commit hooks
- Add ty-check hook to run 'uvx ty check' before commits
- Applies to Python files in packages/common/src and packages/lambdas/src
- Ensures type checking happens automatically on every commit
- Catches type errors early in the development process

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,15 @@ repos:
         stages: [pre-commit]
         files: ^(packages/common/src|packages/lambdas/src)/
 
+      - id: ty-check
+        name: Ty type check
+        description: Run ty type checker for static type analysis
+        entry: uvx ty check
+        language: system
+        types: [python]
+        stages: [pre-commit]
+        files: ^(packages/common/src|packages/lambdas/src)/
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
