--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,18 @@ dev = [
     "mypy>=1.0.0",
     "pre-commit>=3.0.0",
 ]
+lambdas = [
+    "boto3==1.42.30",
+    "botocore==1.42.30",
+    "requests==2.28.0",
+    "anthropic==0.76.0",
+    "openai==1.109.1",
+    "pydantic==2.12.5",
+    "dotenv==0.9.9",
+]
+
+[tool.uv]
+default-groups = ["dev"]
 
 [tool.black]
 line-length = 100
