Fix dependency group configuration for dev tools
- Change from [project.optional-dependencies] to [dependency-groups] for uv compatibility
- Add default-groups = ['dev'] to make dev tools install by default
- Update lambdas pyproject.toml to use dependency-groups syntax
- pytest, ruff, mypy, black, etc. now install automatically with uv sync

Resolves issue where dev dependencies weren't being installed despite being configured.

--- a/packages/lambdas/pyproject.toml
+++ b/packages/lambdas/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "common",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 test = [
     "pytest>=7.0.0",
     "moto>=4.0.0",
