Move moto dependency to root pyproject.toml
- Add moto>=4.0.0 to root dev dependencies for workspace-wide testing
- Remove moto from lambdas package test dependencies
- Update uv.lock with new dependency configuration
- Moto now available across the entire workspace for testing AWS services

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ scripts = { workspace = true }
 [dependency-groups]
 dev = [
     "pytest>=7.0.0",
+    "moto>=4.0.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
     "ruff>=0.1.0",
