Implement structured JSON logging system
- Add python-json-logger dependency for JSON log formatting
- Implement setup_logging() function with configurable format (json/text)
- Update log_error/log_warning/log_info to accept structured extra data
- Add get_logger() convenience function for module-specific loggers
- Maintain backward compatibility with existing Telegram notifications
- Create demo script showing both text and JSON log formats
- Fix linting issues: remove unused import, fix import order

Structured logs include: timestamp, service, version, level, message, module, function, line, plus custom extra fields

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.0.0",
     "pre-commit>=4.3.0",
+    "python-json-logger>=2.0.0",
 ]
 lambdas = [
     "boto3==1.42.30",
