Add Ruff formatting to pre-commit hooks
- Added ruff-format hook that runs 'uv run ruff format' before commits
- Reordered hooks to run format first, then lint, then type check
- Ensures all Python code is automatically formatted on every commit
- Only runs on files in packages/common/src and packages/lambdas/src

This provides automatic code formatting at the local level before pushing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,15 @@
 repos:
   - repo: local
     hooks:
+      - id: ruff-format
+        name: Ruff format
+        description: Run ruff formatter to auto-format Python code
+        entry: uv run ruff format
+        language: system
+        types: [python]
+        stages: [pre-commit]
+        files: ^(packages/common/src|packages/lambdas/src)/
+
       - id: ruff-lint
         name: Ruff lint
         description: Run ruff linter for import sorting and unused imports
