--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ scripts = { workspace = true }
 [dependency-groups]
 dev = [
     "pytest>=7.0.0",
+    "mock>=5.2.0",
     "moto>=4.0.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
